--- a/src/index.css
+++ b/src/index.css
@@ -43,11 +43,12 @@ code {
   font-weight: 500;
   box-shadow: none;
 }
-.tab:hover{
+.active-tab,.add-to-cart:hover{
   cursor: pointer;
 }
-.active-tab:hover{
+.tab:hover {
   cursor: pointer;
+  background: #e1e1e1;
 }
 .list{
   display: flex;
@@ -62,15 +63,38 @@ code {
 .mobile-card{
   display: inline-flex;
   background-color: white;
-  margin-right: 5px;
-  width:30%
+  margin-right: 15px;
+  width:30%;
+  height: 190px;
+}
+.mobile-image{
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 170px;
 }
 .mobile-right{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding-right: 0px;
 }
-.laptop-list{
+.mobile-desc{
+  margin-top: 10px;
+}
+.add-to-cart{
+  color: white;
+  background-color: green;
+  padding: 5px 5px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  border-radius: 3.5px;
+  font-size: 13px;
+  font-weight: 500;
+  box-shadow: none;
+  height: 30px;
+}
+.laptops-list{
   margin-top: 20px;
   display: block ruby;
   overflow-x: scroll;
@@ -79,11 +103,19 @@ code {
 .laptop-card{
   display: inline-flex;
   background-color: white;
-  margin-right: 5px;
-  width:30%
+  margin-right: 15px;
+  width:30%;
+  height: 208px;
+}
+.laptop-image{
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 85px;
 }
 .laptop-right{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding-right: 0px;
 }
