--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ code {
   box-shadow: none;
 }
 
-.active-tab,
+.cart-delete,.active-tab,
 .add-to-cart:hover {
   cursor: pointer;
 }
@@ -99,6 +99,7 @@ code {
 
 .mobile-desc {
   margin-top: 10px;
+  font-size: 1rem;
 }
 
 .add-to-cart {
@@ -150,6 +151,11 @@ code {
   justify-content: space-between;
   padding-right: 0px;
 }
+.laptop-desc {
+  margin-top: 10px;
+  font-size: .8rem;
+  font-weight: 550;
+}
 .cart-list {
   margin-top: 20px;
   display: flex;
@@ -193,4 +199,23 @@ code {
 
 .cart-desc {
   margin-top: 1px;
+  font-size: 1rem;
+}
+.no-items {
+  margin-top: -10px;
+  font-size: 1rem;
+  color: #6d6d6d;
+}
+.cart-delete {
+  color: white;
+  background-color: rgb(221, 34, 34);
+  padding: 3.5px 3.5px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  border-radius: 3.5px;
+  font-size: 13px;
+  font-weight: 500;
+  box-shadow: none;
+  height: 30px;
+  width: 90px;
 }
