--- a/src/index.css
+++ b/src/index.css
@@ -219,3 +219,164 @@ code {
   height: 30px;
   width: 90px;
 }
+@media(max-width:500px) {
+.main {
+  margin-top: 15px;
+  width: 90%;
+}
+.tab {
+  color: black;
+  background-color: white;
+  padding: 7.5px 7.5px;
+  margin-right: 4px;
+  border-radius: 3.5px;
+  font-size: 15px;
+  font-weight: 500;
+  box-shadow: none;
+}
+
+.active-tab {
+  color: white;
+  background-color: rgb(60, 150, 235);
+  padding: 7.5px 7.5px;
+  margin-right: 4px;
+  border-radius: 3.5px;
+  font-size: 15px;
+  font-weight: 500;
+  box-shadow: none;
+}
+.mobiles-list {
+  margin-top: 15px;
+}
+.mobile-card {
+  display: inline-flex;
+  background-color: white;
+  margin-right: 10px;
+  width: 70%;
+  height: 180px;
+  border-radius: 10px;
+}
+
+.mobile-image {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 100px;
+}
+
+.mobile-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-right: 0px;
+}
+
+.mobile-desc {
+  margin-top: 10px;
+  font-size: 1rem;
+}
+
+.add-to-cart {
+  color: white;
+  background-color: green;
+  padding: 5px 5px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  border-radius: 3.5px;
+  font-size: 13px;
+  font-weight: 500;
+  box-shadow: none;
+  height: 30px;
+  width: 90px;
+}
+.laptop-card {
+  display: inline-flex;
+  background-color: white;
+  margin-right: 10px;
+  width: 70%;
+  height: 200px;
+  border-radius: 10px;
+}
+
+.laptop-image {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 60px;
+}
+
+.laptop-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-right: 0px;
+}
+.laptop-desc {
+  margin-top: 10px;
+  font-size: .8rem;
+  font-weight: 550;
+}
+.cart-list {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  /* overflow-x: scroll; */
+  box-sizing: border-box;
+  width: 100%;
+  /* height: auto; */
+  /* justify-content: center; */
+  align-items: center;
+  /* position: relative; */
+  /* scroll-behavior: smooth; */
+}
+.cart-card {
+  display: flex;
+  justify-content: space-around;
+  /* align-items: flex-start; */
+  background-color: white;
+  margin-right: 0;
+  width: 90%;
+  /* height: 220px; */
+  margin-top: 15px;
+  border-radius: 10px;
+
+}
+
+.cart-image {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  height: 100px;
+}
+
+.cart-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-right: 0px;
+}
+
+.cart-desc {
+  margin-top: .9px;
+  font-size: 1rem;
+}
+.no-items {
+  margin-top: -10px;
+  font-size: 1rem;
+  color: #6d6d6d;
+}
+.cart-delete {
+  color: white;
+  background-color: rgb(221, 34, 34);
+  padding: 3.5px 3.5px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  border-radius: 3.5px;
+  font-size: 13px;
+  font-weight: 500;
+  box-shadow: none;
+  height: 25px;
+  width: 85px;
+}
+}
